<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="org.csystem.android.app.payment.viewmodel.LoginActivityListenerViewModel"/>
        <import type="org.csystem.android.app.data.service.dto.LoginInfoDTO"/>
        <variable name="viewModel" type="LoginActivityListenerViewModel" />
        <variable name="loginInfo" type="LoginInfoDTO" />
    </data>

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/edittext_user_name_hint_text"
            android:text="@={loginInfo.username}"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/edittext_password_hint_text"
            android:text="@={loginInfo.password}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login_text"
            android:onClick="@{() -> viewModel.handleLoginButton()}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_close_text"
            android:onClick="@{() -> viewModel.handleCloseButton()}"/>

    </LinearLayout>
</layout>
