<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="org.csystem.android.app.payment.viewmodel.OperationsActivityListenerViewModel"/>
        <variable name="viewModel" type="OperationsActivityListenerViewModel" />
    </data>

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".OperationsActivity">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_payment_text"
            android:onClick="@{() -> viewModel.handlePaymentButton()}"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_login_information_text"
            android:onClick="@{() -> viewModel.handleLoginInformationButton()}"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_close_text"
            android:onClick="@{() -> viewModel.handleCloseButton()}"
            />
    </LinearLayout>
</layout>
